# truly-artificial-intelligence

./: .gitignore  pyproject.toml
src/dataset/: dataset.py
src/dataset/syntax/: __init__.py  syntax.py
src/dataset/syntax/_syntax_impl/: operator.py
test/: test_dataset.py
test/unit/generator/: test_generator.py
test/unit/syntax/: test_syntax.py
